zapata-dx/force-app/main/default/objects/Slot_Taller__c/Slot_Taller__c.object-meta.xml
<CustomObject>
    <description>Agenda de franjas sin Field Service. Plan seccion 6.3.</description>
    <label>Slot de taller</label>
    <nameField>
        <displayFormat>SLOT-{000000}</displayFormat>
        <label>Numero de slot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slots de taller</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>