zapata-dx/force-app/main/default/objects/Slot_Taller__c/fields/Capacidad_Total__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Total__c</fullName>
    <description>Cupos totales de la franja.</description>
    <label>Capacidad total</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>