zapata-dx/force-app/main/default/objects/Slot_Taller__c/fields/Capacidad_Usada__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Usada__c</fullName>
    <description>Cupos reservados. Solo lo actualiza Crear_Orden_Servicio o Reprogramar_Orden_Servicio.</description>
    <label>Capacidad usada</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>