zapata-dx/force-app/main/default/objects/Slot_Taller__c/fields/Cupos_Libres__c.field-meta.xml
<CustomField>
    <fullName>Cupos_Libres__c</fullName>
    <description>Cupos restantes de la franja.</description>
    <formula>Capacidad_Total__c - Capacidad_Usada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cupos libres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>