zapata-dx/force-app/main/default/objects/Slot_Taller__c/fields/Disponible__c.field-meta.xml
<CustomField>
    <fullName>Disponible__c</fullName>
    <description>Verdadero si la sucursal esta activa y queda cupo. La vigencia temporal se filtra en el Flow, no en la formula.</description>
    <formula>AND( Sucursal__r.Activa__c, Capacidad_Usada__c &lt; Capacidad_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible</label>
    <type>Checkbox</type>
</CustomField>