zapata-dx/force-app/main/default/objects/Slot_Taller__c/fields/Fin__c.field-meta.xml
<CustomField>
    <fullName>Fin__c</fullName>
    <description>Fin de la franja en UTC.</description>
    <label>Fin</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>