zapata-dx/force-app/main/default/objects/Slot_Taller__c/fields/Inicio__c.field-meta.xml
<CustomField>
    <fullName>Inicio__c</fullName>
    <description>Inicio de la franja en UTC. El Flow filtra Inicio__c &gt; NOW().</description>
    <label>Inicio</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>