zapata-dx/force-app/main/default/objects/Slot_Taller__c/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <description>Origen y nivel de verificacion de la franja. Solo OPERACIONAL_VERIFICADO permite reservar o reprogramar.</description>
    <inlineHelpText>SITIO_WEB_CAPACIDAD_ASUMIDA identifica horarios derivados de sitio con capacidad no confirmada.</inlineHelpText>
    <label>Procedencia del horario</label>
    <length>80</length>
    <type>Text</type>
</CustomField>