zapata-dx/force-app/main/default/objects/Slot_Taller__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Taller propietario de la franja.</description>
    <label>Sucursal</label>
    <referenceTo>Sucursal__c</referenceTo>
    <relationshipLabel>Slots de taller</relationshipLabel>
    <relationshipName>Slots_Taller</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>