zapata-dx/force-app/main/default/objects/Slot_Taller__c/fields/Tipo_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Servicio__c</fullName>
    <description>Tipo de trabajo que admite la franja. Entrada de Consultar_Disponibilidad.</description>
    <label>Tipo de servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnostico</fullName>
                <default>true</default>
                <label>Diagnostico</label>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Garantia</fullName>
            </value>
            <value>
                <fullName>Reparacion mayor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>