zapata-dx/force-app/main/default/objects/Slot_Taller__c/validationRules/Capacidad_Usada_No_Excede_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacidad_Usada_No_Excede_Total</fullName>
    <active>true</active>
    <errorConditionFormula>Capacidad_Usada__c &gt; Capacidad_Total__c</errorConditionFormula>
    <errorDisplayField>Capacidad_Usada__c</errorDisplayField>
    <errorMessage>Los cupos usados no pueden superar la capacidad total de la franja.</errorMessage>
</ValidationRule>