zapata-dx/force-app/main/default/objects/Slot_Taller__c/validationRules/Fin_Posterior_A_Inicio.validationRule-meta.xml
<ValidationRule>
    <fullName>Fin_Posterior_A_Inicio</fullName>
    <active>true</active>
    <errorConditionFormula>Fin__c &lt;= Inicio__c</errorConditionFormula>
    <errorDisplayField>Fin__c</errorDisplayField>
    <errorMessage>La hora de fin debe ser posterior a la de inicio.</errorMessage>
</ValidationRule>