zapata-dx/force-app/main/default/objects/Slot_Taller__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Sucursal__c</columns>
    <columns>Inicio__c</columns>
    <columns>Fin__c</columns>
    <columns>Tipo_Servicio__c</columns>
    <columns>Cupos_Libres__c</columns>
    <columns>Disponible__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>